# Device-Detection

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  GDPR.md  LICENSE  README.md  README.txt  Win32build.bat  Win64build.bat  WinGCCbuild.bat  license.md  makefile
51Degrees_module/: ngx_http_51D_module.c
ApacheBench/: .gitignore  ApacheBench.cbp  Makefile  README.md  ab  ab.c  ap_release.h  apr-skeleton.c
ApacheBench/apr/: Makefile  Makefile_apr  Makefile_aprutil
CodeBlocks/: .gitignore  ApacheBench.cbp  Console.cbp  Console.depend  Console.layout  FindProfiles.cbp  GettingStarted.cbp  GettingStartedTrie.cbp  MatchForDeviceId.cbp  MatchMetrics.cbp  OfflineProcessing.cbp  PerfPat.cbp  PerfPat.depend  PerfPat.layout  PerfTrie.cbp  PerfTrie.depend  PerfTrie.layout  ProcPat.cbp  ProcPat.layout  ProcTrie.cbp  ProcTrie.depend  ProcTrie.layout  ReloadFromFile.cbp  ReloadFromFileTrie.cbp  ReloadFromMemory.cbp  ReloadFromMemoryTrie.cbp  StronglyTyped.cbp
VisualStudio/: .gitignore  README.md  VisualStudio.sln  Win32build.bat  Win64build.bat  WinGCCbuild.bat  x64Build.bat  x86Build.bat
VisualStudio/Backup/: Default.aspx  Default.aspx.cs  Default.aspx.designer.cs  Demo.csproj
VisualStudio/Console/: Console.vcxproj  Console.vcxproj.filters
VisualStudio/Console Interop/: Console Interop.csproj  Program.cs
VisualStudio/ConsoleApplication1/: ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters
VisualStudio/Demo/: Default.aspx  Default.aspx.cs  Default.aspx.designer.cs  FiftyOne.WebSite.csproj  Global.asax  Global.asax.cs  Web Site.csproj  Web.config
VisualStudio/Interop/: FiftyOne.Mobile.Detection.Provider.Interop.csproj  IMatchResult.cs  IWrapper.cs  PatternWrapper.cs  TrieWrapper.cs  Utils.cs
VisualStudio/Memory/: FiftyOne.Mobile.Detection.Memory.csproj  Program.cs
VisualStudio/Pattern/: FiftyOne.Mobile.Detection.Provider.Pattern.vcxproj  FuncsPatternDll.c  PreBuild.bat
VisualStudio/PerfPat/: PerfPat.vcxproj  PerfPat.vcxproj.filters
VisualStudio/PerfTrie/: PerfTrie.vcxproj  PerfTrie.vcxproj.filters
VisualStudio/Performance/: FiftyOne.Mobile.Detection.Performance.vcxproj  Performance.cpp  stdafx.cpp  stdafx.h
VisualStudio/ProcPat/: ProcPat.vcxproj  ProcPat.vcxproj.filters
VisualStudio/ProcTrie/: ProcTrie.vcxproj  ProcTrie.vcxproj.filters
VisualStudio/Reconcile/: Base.cs  FiftyOne.Reconcile.csproj  PatternBase.cs  TrieBase.cs
VisualStudio/Reload Data File/: Program.cs  Reload Data File.csproj
VisualStudio/Trie/: FiftyOne.Mobile.Detection.Provider.Trie.aps  FiftyOne.Mobile.Detection.Provider.Trie.vcxproj  FuncsTrieDll.c  PostBuild.bat  PreBuild.bat  resource.h
VisualStudio/UnitTests/: Base.cs  FiftyOne.UnitTests.csproj  PatternBase.cs  TrieBase.cs  UnitTests.csproj
data/: .gitignore  20000 User Agents.csv  51Degrees-LiteV3.2.trie  README.md  TRIE.txt
examples/: FindProfiles.c  GettingStarted.c  GettingStartedMatchMetrics.c  GettingStartedStronglyTyped.c  GettingStartedTrie.c  MatchForDeviceId.c  MatchMetrics.c  OfflineProcessing.c  ReloadFromFile.c  ReloadFromFileTrie.c  ReloadFromMemory.c  ReloadFromMemoryTrie.c  StronglyTyped.c
go/: .gitignore  FindProfiles.go  GettingStarted.go  GettingStartedHashTrie.go  GettingStartedTrie.go  MatchForDeviceId.go  MatchMetrics.go  OfflineProcessing.go  OfflineProcessingHashTrie.go  OfflineProcessingTrie.go  PerfHashTrie.go  PreBuild.bat  README.md  StronglyTyped.go  StronglyTypedHashTrie.go  StronglyTypedTrie.go  makefile  readme.txt  server.go
go/html/: example.html  index.html  using-detection.html
haproxy/: .gitignore  51d_to_haproxy  Makefile  README  config  config-pattern  config-trie  haproxy.cbp  haproxy_to_51d  server.js  update
haproxy/src/: 51d.c  proto_http.c
java/: build.bat  build.sh
java/trie/: pom.xml
lua/: FiftyOneDegrees.lua  Makefile  README.md
lua/examples/: FindProfiles.lua  GettingStarted.lua  GettingStartedTrie.lua  MatchForDeviceId.lua  MatchMetrics.lua  OfflineProcessing.lua
nginx/: .gitignore  CodeBlocks.cbp  GetNginxSource.sh  Makefile  README  README.md  bootstrap  compile  exportmodule  install  nginx.conf  start  test.sh  trie_example.conf
nginx/51Degrees_module/: ngx_http_51D_module.c
nginx/CodeBlocks/: 51Degrees_NGINX.cbp  bootstrap
nginx/example/: example.php  pattern.conf  test_pattern.conf  test_trie.conf  trie.conf
nginx/module_conf/: pattern_config  trie_config
nginx/pattern/: CreateModule.sh  example.conf  pattern.cbp
nginx/src/: config  ngx_http_51D_module.c  ngx_http_51D_module.h
nginx/tests/: 51degrees.t
nginx/trie/: CreateModule.sh  example.conf  trie.cbp
node.js/: .gitignore  .npmignore  51d.js  FiftyOneDegreesPatternV3.js  FiftyOneDegreesV3.js  GettingStarted.js  License.txt  README.md  binding.gyp  binding.gyp~  client.js  config.json  copySource.js  example.js  gitCopy.js  index.js  install  package.json  shareUsage.js  steps  test.js  update.js
node.js/VisualStudio/: Node.js.sln  README.md
node.js/benchmark/: 10k.csv  test-gc.js  test-gc2.js  test-perf.js  test2.js  ua.txt
node.js/examples/: FindProfiles.js  GettingStarted.js  GettingStartedTrie.js  (+12 more)
perl/: .gitignore  README.md  README.txt  cpanfile
php/: .gitignore  Changelog.txt  README.md  README.txt  config.m4  fiftyone_degrees_v3_extension.c
python/: .gitignore  Makefile  README.md  README.rst  setup.py
rust/: Cargo.toml  build.rs  lib.rs  package.sh  pattern.rs  pattern_c.rs  trie.rs  trie_c.rs
src/: CacheTest.c  README.md  cache.c  cache.h  threading.c  threading.h
varnish/: .gitignore  Makefile.am  README.md  README.rst  autogen.sh  build.sh  configure.ac  example.vcl  fiftyonedegrees.cbp  run.sh  varnish.vcl  version.py
varnish/src/: Makefile.am  vmod_fiftyonedegrees.c  vmod_fiftyonedegrees.vcc  vmod_fiftyonedegrees.vcc.template  vmod_fiftyonedegrees_hash.c  vmod_fiftyonedegrees_interface.h  vmod_fiftyonedegrees_pattern.c
varnish/src/tests/: desktop.vtc  match_all.vtc  match_single.vtc  mobile.vtc  properties.vtc  version.vtc
windows/: FiftyOne.Mobile.Detection.Performance.sln  FiftyOne.Mobile.Detection.Provider.sln  x86Build.bat
(+517 files in other folders)
