[package]
name = "fiftyonedegrees"
version = "0.1.0"
edition = "2018"
build = "rust/build.rs"

[lib]
path = "rust/src/lib.rs"

[features]
browser-name-enum = []
browser-name-enum-mode = []
platform-name-enum = []
trie = []
pattern = []

[dependencies]
libc = "0.2.64"

[build-dependencies]
cc = "1.0.46"
